Use postgresql builtin escaping
Signed-off-by: Edwin Török <edvin.torok@citrix.com>

--- a/dune
+++ b/dune
@@ -1,5 +1,6 @@
 (library
  (name sql)
  (libraries postgresql)
- (flags (:standard -w @a-4-6-9-27-28-29))
+ (flags
+  (:standard -w @a-4-6-9-27-28-29))
  (wrapped false))
